--- a/xmonad-themes.cabal
+++ b/xmonad-themes.cabal
@@ -6,13 +6,13 @@ cabal-version: 1.12
 
 name:           xmonad-themes
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/xmonad-themes#readme>
-homepage:       https://github.com/githubuser/xmonad-themes#readme
-bug-reports:    https://github.com/githubuser/xmonad-themes/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2021 Author name here
-license:        BSD3
+description:    Please see the README on GitHub at <https://github.com/CyberGsus/xmonad-themes#readme>
+homepage:       https://github.com/CyberGsus/xmonad-themes#readme
+bug-reports:    https://github.com/CyberGsus/xmonad-themes/issues
+author:         Cyber Gsus
+maintainer:     cyber.gsuscode@gmail.com
+copyright:      2021 Cyber Gsus
+license:        MIT
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/xmonad-themes
+  location: https://github.com/CyberGsus/xmonad-themes
 
 library
   exposed-modules:
